# LagBot

./: .gitignore  ARCHITECTURE.md  BUG_FIX_SUMMARY.md  CHANGELOG_WEB_IMPLEMENTATION.md  CHANGES_SUMMARY.md  EXAMPLES.md  FIX_SUMMARY.md  FUTURE_BANKROLL_TRACKING.md  IMPLEMENTATION_SUMMARY.md  NEXTTODO.txt  OPPONENT_PROFIT_TRACKING.md  README.md  README_WEB.md  check_opponent_awareness.py  dashboard_gen.py  docker-compose.yml  play.py  pyproject.toml  pytest.ini  quick_diagnostic.py  requirements.txt  resume_training.py  sandbox.py  setup.py  start_web.sh  test_new_features.py  test_opponent_profit_tracking.py  test_wrapper_rewards.py  train.py  train_diverse_opponents.py  train_from_checkpoint.py  training_report.html
backend/: Dockerfile  main.py  requirements.txt
configs/: aggressive_learning_3M.yaml  chained_3gen_200k.yaml  deep_architecture_2M.yaml  deep_architecture_3M.yaml  default_config.yaml  fix_value_function_3M.yaml  heads_up_3gen_200k.yaml  heads_up_anchor_2M.yaml  heads_up_chain_2M.yaml  heads_up_chain_resume_gen1.yaml  heads_up_chain_resume_gen2.yaml  heads_up_chain_resume_gen3.yaml  heads_up_chain_resume_gen4.yaml  heads_up_chain_resume_gen5.yaml  heads_up_pool_smoke.yaml  heads_up_pool_v1.yaml  opponent_prediction_3M.yaml  quick_test_50k.yaml  reduced_entropy_2M.yaml  self_play_3M.yaml  separate_actor_critic_2M.yaml  shared_layers_3M.yaml  simplified_features_3M.yaml  smoke_config.yaml  wide_architecture_9M.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  GPU_TRAINING_GUIDE.md  QUICK_START.md  TESTING.md  TRAINING_GUIDE.md
documentation/: FILE_INDEX.md  (+2 more)
(+220 files in other folders)
